crates/math-core/tests/snapshots/error_test__hspace_empty.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\hspace{  }"
---
Error: Expected length with units, found " ".
   ╭─[ <input>:1:8 ]
   │
 1 │ \hspace{  }
   │        ──┬─  
   │          ╰─── expected length here
───╯
